# news_aggregator

./: .env.example  .gitignore  LICENSE  README.md  check_index.py  data_collection_agent.py  data_processing_agent.py  pyproject.toml  requirements.txt  streamlit_app.py  test_connection.py
.streamlit/: config.toml  secrets.toml.example
